Changed icon in tittle bar

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./logo_d07_icon.ico" />
     <style>
       @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
       </style>
